2020-02-24  Eric Blake  <eblake@redhat.com>

	* .gitignore: Ignore files created during 'make check'.

2020-02-24  Eric Blake  <eblake@redhat.com>

	maint: add run script for easier uninstalled usage
	* run.in: New file.
	* configure.ac (AC_CONFIG_FILES): Use it to build 'run'.
	* Makefile.am (noinst_SCRIPTS): Include template in tarball.
	* HACKING (Running an Uninstalled Poke): Document it.
	* .gitignore: Exempt new file.

2020-02-24  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING (Running and Uninstalled Poke): Update to cover
	POKEPICKLESDIR.

2020-02-23  Bruno Haible  <bruno@clisp.org>

	HACKING: Tell where to find the DejaGnu documentation.
	* HACKING (Test framework): New section.

2020-02-23  Bruno Haible  <bruno@clisp.org>

	Avoid a test failure, when running the test suite as root.
	* testsuite/poke.cmd/file-mode.pk: Allow /etc/passwd to be opened
	read-write.

2020-02-23  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.g4 (funcall_stmt_arg): Remove empty lines at EOF.
	* testsuite/poke.pkl/funcall-13.pk: Likewise.
	* testsuite/poke.pkl/close-2.pk: Likewise.
	* src/pk-utils.c: Likewise.

2020-02-22  John Darrington <john@darrington.wattle.id.au>

	* src/pk-ios.c (count_io_spaces): delete.
	* src/pk-ios.c (close_completion_function): Rename
	to ios_completion_function.
	* src/pk-ios.c (ios_completion_function): Do not
	assume that IO tags are consecutive integers.
	* src/pk-ios.c (ios_cmd): Add new completer.

2020-02-22  John Darrington <john@darrington.wattle.id.au>

	* src/ios.c (ios_begin): New function.
	* src/ios.c (ios_end): New function.
	* src/ios.c (ios_next): New function.
	* src/ios.h (ios_begin): New declaration.
	* src/ios.h (ios_end): New declaration.
	* src/ios.h (ios_next): New declaration.

2020-02-21  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/sizeof-1.pk: New test.
	* testsuite/poke.pkl/sizeof-2.pk: Likewise.
	* testsuite/poke.pkl/sizeof-3.pk: Likewise.
	* testsuite/poke.pkl/sizeof-12.pk: Likewise.