@@ -1,0 +1,4 @@
+/* { dg-do run } */
+
+/* { dg-command {  [1,2,] } } */
+/* { dg-output "\\\[1,2\\\]" } */
